# cpp-starter-lite

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
